# travent_a2a_agent_poc

./: .env.example  .gitignore  README.md
host_agent/: pyproject.toml
host_agent/host/: agent.py  config.py  host_agent.py  host_agent_executor.py  remote_agent_connection.py
host_agent/host/tools/: add_data.py  create_corpus.py
search_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
travel_planning_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
